# pyswip

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG  CHANGELOG.md  CONTRIBUTORS.txt  COPYING  INSTALL  INSTALL.MD  INSTALL.md  LICENSE  Makefile  NOTICE  README  README.md  dev-requirements.txt  pyproject.toml  pyswip.bibtex  pyswip.py  setup.py  test-CHOUAKI.py  test-requirements.txt
.github/workflows/: tests.yaml
docker/: Dockerfile
docker/etc/update-motd.d/: 10-help-text  50-motd-news
docs/source/: conf.py  get_started.rst  index.rst  value_exchange.rst
docs/source/api/: easy.rst  examples.rst  modules.rst  prolog.rst
examples/: README  README.md  animal2.py  create_term.py  father.py  getinteger.py  getlist.py  knowledgebase.py  register_foreign.py  register_foreign_simple.py
examples/coins/: coins.pl  coins.py  coins_new.py
examples/draughts/: puzzle1.pl  puzzle1.py
examples/hanoi/: hanoi.py  hanoi_simple.py
examples/sendmoremoney/: money.pl  money.py  money_new.py
examples/sudoku/: sudoku.pl  sudoku.py  sudoku_daily.py  sudoku_new.py
pyswip/: __init__.py  const.py  core.py  discover.py  easy.py  errors.py  load_library.py  prolog.py  pyswip.py  swipl.py  term.py  util.py
src/pyswip/: __init__.py  core.py  easy.py  errors.py  prolog.py  utils.py
src/pyswip/examples/: coins.pl  coins.py  hanoi.pl  hanoi.py  sudoku.py
test/: TESTING_README  draughts.pl  hanoi.pl  pyswip.py  pyswipl.c.py  pyswiplc.py  runtests  runtests.bat  runtests3  test_examples.py  test_issues.py  test_prolog.py
tests/: 105.pl  139.pl  __init__.py  test_core.py  test_examples.py  test_foreign.py  test_issues.py  test_prolog.py  test_unicode.pl  test_utils.py
tests/examples/: hanoi_fixture.txt  hanoi_simple_fixture.txt  sudoku.txt  test_coins.py  test_hanoi.py  test_sudoku.py  utils.py
tests/fixtures/: test_functor_return.pl  test_read.pl
