[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyswip"
version = "0.3.3"
description = "PySwip enables querying SWI-Prolog in your Python programs."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Yuce Tekol", email = "yucetekol@gmail.com" },
]
keywords = [
    "ai",
    "artificial intelligence",
    "ctypes",
    "ffi",
    "prolog",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Download = "https://github.com/yuce/pyswip/releases"
Homepage = "https://pyswip.org"

[tool.ruff.lint]
ignore = ["F403", "F405", "E721"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.setuptools.package-data]
pyswip = ["py.typed"]
"pyswip.examples" = ["*.pl"]

[tool.setuptools.packages.find]
where = ["src"]
